@@ -29,3 +29,4 @@ reporting bugs, providing fixes, suggesting useful features or other:
 	Donghang Lin <https://github.com/dhlin>
 	Arcadiy Ivanov <https://github.com/arcivanov>
 	Dmitriy Blok <https://github.com/dmitriyblok>
+	Oleander Reis <https://github.com/oleeander>
