@@ -177,6 +177,10 @@ http {
              -- Connect provider that ignores the paramter as the
              -- id_token will be rejected otherwise.
 
+             --revoke_tokens_on_logout = false
+             -- When revoke_tokens_on_logout is set to true a logout notifies the authorization server that previously obtained refresh and access tokens are no longer needed. This requires that revocation_endpoint is discoverable.
+             -- If there is no revocation endpoint supplied or if there are errors on revocation the user will not be notified and the logout process continues normally.
+
              -- Optional : use outgoing proxy to the OpenID Connect provider endpoints with the proxy_opts table : 
              -- this requires lua-resty-http >= 0.12
              -- proxy_opts = {
